# edit

./: Cargo.toml  README.md
.cargo/: release-nightly.toml  release-windows-ms.toml  release.toml
.pipelines/: release.yml
assets/: install.sh  snapcraft.yaml
assets/highlighting-tests/: COMMIT_EDITMSG  bash.sh  batch.bat  diff.diff  git-rebase-todo  html.html  javascript.js  json.json  markdown.md  powershell.ps1  properties.conf  python.py  shellscript.sh  xml.xml  yaml.yml
assets/manpage/: edit.1
crates/: README.md
crates/edit/: Cargo.toml
crates/edit/benches/: lib.rs
crates/edit/src/: apperr.rs  base64.rs  document.rs  framebuffer.rs  fuzzy.rs  glob.rs  helpers.rs  icu.rs  input.rs  json.rs  lib.rs  tui.rs  vt.rs
crates/edit/src/buffer/: gap_buffer.rs  mod.rs
crates/edit/src/simd/: memchr2.rs
crates/edit/src/sys/: unix.rs  windows.rs
crates/edit/src/unicode/: measurement.rs
crates/lsh/: Cargo.toml  README.md
crates/lsh-bin/: Cargo.toml
crates/lsh-bin/src/: main.rs
crates/lsh/definitions/: README.md  diff.lsh  git_commit.lsh  git_commit_messsage.lsh  git_ignore.lsh  git_rebase.lsh  git_rebase_todo.lsh  ignore.lsh  javascript.lsh  json.lsh  lsh.lsh  markdown.lsh  powershell.lsh  properties.lsh  python.lsh  shellscript.lsh  utility.lsh  xml.lsh  yaml.lsh
crates/lsh/src/: lib.rs  runtime.rs
crates/lsh/src/compiler/: backend.rs  charset.rs  (+5 more)
crates/stdext/: Cargo.toml
crates/stdext/src/: alloc.rs  float.rs  helpers.rs  lib.rs
crates/unicode-gen/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: highlighter.rs
i18n/: edit.toml
(+14 files in other folders)
