[package]
name = "unicode-gen"
version = "0.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
indoc = "2.0"
pico-args = { version = "0.5", features = ["eq-separator"] }
rayon = "1.10"
roxmltree = { version = "0.21", default-features = false, features = ["std"] }
